fix alignement issue

--- a/src/components/OurProducts/style.css
+++ b/src/components/OurProducts/style.css
@@ -19,7 +19,7 @@
 }
 
 .align-text {
-  text-align: left;
+  text-align: left !important;
 }
 
 .flex {
